@@ -3,6 +3,8 @@
 * Changed: Error reporting now shows 'buildr aborted!' (used to say rake),
 more of the stack trace without running --trace, and when running with
 supported terminal, error message is red.
+* Changed: BUILDR-104 Buildr::group has :under and :version, but not :type.
+Now it has :type too (Lacton).
 * Fixed: BUILDR-106 download(artifact(...)=>url) broken in certain cases
 (Lacton).
 
